# claude-code-discord-bridge

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DUAL_BACKEND_HANDOFF.md  README.md  REFACTORING_PLAN.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.reports/: dead-code-analysis.md  ruff-findings.txt  vulture-findings.txt
claude_code_core/: __init__.py  api_provider.py  backend.py  codex_runner.py  models.py  parser.py  runner.py  session_repo.py  thread_search.py  transcript_search.py  types.py
claude_discord/: __init__.py  backend_factory.py  backend_settings.py  bot.py  cli.py  collision.py  concurrency.py  lounge.py  main.py  memory_loader.py  protocols.py  relay.py  run_job.py  session_sync.py  session_view.py  setup.py
docs/: ARCHITECTURE.md
examples/: context_links.json
scripts/: build-core-wheel.sh  cleanup_worktrees.sh  pre-start.sh
tests/: conftest.py  test_alert_responder.py  test_api_external_ingest.py  test_api_max_body.py  test_api_provider.py  test_api_run.py  test_api_search.py  test_api_server.py  test_api_tasks.py  test_api_thread_summary.py  test_architecture.py  test_ask_feature.py  test_auto_upgrade.py  test_backend_command_session_clear.py  test_backend_factory_api_port.py  test_backend_factory_codex_defaults.py  test_backend_session_mismatch.py  test_backend_settings.py  test_build_runner_for_thread.py  test_chunker.py  test_claude_chat.py  test_codex_runner.py  test_codex_usage.py  test_collision_detection.py  test_context_links.py  test_coordination.py  test_describe_api.py  test_effort_command.py  test_embeds.py  (+50 more)
(+118 files in other folders)
