[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-discord-bridge"
version = "3.1.22"
description = "Claude & Codex Discord Bridge — drive both Claude Code and OpenAI Codex from Discord with interactive chat, parallel sessions, and CI/CD automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.7.1,<3.0",
    "aiosqlite>=0.20,<1.0",
    "python-dotenv>=1.2.2,<2.0",
]

[project.optional-dependencies]
api = ["aiohttp>=3.14.1"]
images = ["pillow>=12.3.0"]

[project.scripts]
ccdb = "claude_discord.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_discord", "claude_code_core"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "aiohttp>=3.14.1",
    "pyright>=1.1.411",
    "pillow>=12.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_system_context: opt out of the _build_system_context autouse patch",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.coverage.report]
# Exclude lines that don't need coverage (type stubs, abstract methods, etc.)
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
